--- a/src/main/webapp/src/assests/css/app.css
+++ b/src/main/webapp/src/assests/css/app.css
@@ -9,6 +9,9 @@
   font-size: 10px;
 }
 
+.container-fluid{
+	padding-fluid: 0px;
+}
 
 .app{
 	margin-left: 10px;
@@ -86,8 +89,8 @@ a{
 {
 	margin-left: 30px;
 	float: left;
-	height: 500px;
-	width: 650px;
+	height: 400px;
+	width: 95%;
 	background: #F5F5F5;
 	overflow-y: scroll;
 	margin-bottom: 25px;
